removed lazy loading to fixed animations on mobile, fixed bg resizing on scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ body {
   width: 100dvw;
   height: 100dvh;
   scroll-behavior: smooth;
-  background-attachment: scroll;
 }
 
 section {
